@@ -1,7 +1,6 @@
 /*
  *	digest support for NTP, MD5 and with OpenSSL more
  */
-
 #ifdef HAVE_CONFIG_H
 #include <config.h>
 #endif
@@ -9,7 +8,6 @@
 #include "ntp_fp.h"
 #include "ntp_string.h"
 #include "ntp_stdlib.h"
-#include "ntp_assert.h"
 #include "ntp.h"
 #ifdef OPENSSL
 #include "openssl/evp.h"
@@ -18,9 +16,9 @@
 #endif /* OPENSSSL */
 
 /*
- * MD5authencrypt - generate MD5 message authenticator
+ * MD5authencrypt - generate message digest
  *
- * Returns length of authenticator field.
+ * Returns length of MAC including key ID and digest.
  */
 int
 MD5authencrypt(
@@ -30,26 +28,25 @@ MD5authencrypt(
 	int	length		/* packet length */
 	)
 {
-	u_char		digest[64];	/* for SHA-512 */
-	unsigned	len;
+	u_char	digest[32];
+	u_int	len;
 #ifdef OPENSSL
-	const EVP_MD *	digest_type;
-	EVP_MD_CTX	ctx;
+	EVP_MD_CTX ctx;
 #else
-	MD5_CTX		md5;
+	MD5_CTX	md5;
 #endif /* OPENSSL */
 
 	/*
-	 * MD5 with key identifier concatenated with packet.
+	 * Compute digest of key concatenated with packet. Note: the
+	 * key type and digest type have been verified when the key
+	 * was creaded.
 	 */
 #ifdef OPENSSL
-	digest_type = EVP_get_digestbynid(type);
-	NTP_INSIST(digest_type != NULL);
-	EVP_DigestInit(&ctx, digest_type);
+	EVP_DigestInit(&ctx, EVP_get_digestbynid(type));
 	EVP_DigestUpdate(&ctx, key, (u_int)cache_keylen);
 	EVP_DigestUpdate(&ctx, (u_char *)pkt, (u_int)length);
 	EVP_DigestFinal(&ctx, digest, &len);
-#else
+#else /* OPENSSL */
 	MD5Init(&md5);
 	MD5Update(&md5, key, (u_int)cache_keylen);
 	MD5Update(&md5, (u_char *)pkt, (u_int)length);
@@ -64,7 +61,7 @@ MD5authencrypt(
 /*
  * MD5authdecrypt - verify MD5 message authenticator
  *
- * Returns one if authenticator valid, zero if invalid.
+ * Returns one if digest valid, zero if invalid.
  */
 int
 MD5authdecrypt(
@@ -75,32 +72,35 @@ MD5authdecrypt(
 	int	size		/* MAC size */
 	)
 {
-	u_char		digest[64];	/* for SHA-512 */
-	unsigned	len;
+	u_char	digest[32];
+	u_int	len;
 #ifdef OPENSSL
-	EVP_MD_CTX	ctx;
+	EVP_MD_CTX ctx;
 #else
-	MD5_CTX		md5;
 #endif /* OPENSSL */
 
 	/*
-	 * MD5 with key identifier concatenated with packet.
+	 * Compute digest of key concatenated with packet. Note: the
+	 * key type and digest type have been verified when the key
+	 * was created.
 	 */
 #ifdef OPENSSL
 	EVP_DigestInit(&ctx, EVP_get_digestbynid(type));
 	EVP_DigestUpdate(&ctx, key, (u_int)cache_keylen);
 	EVP_DigestUpdate(&ctx, (u_char *)pkt, (u_int)length);
 	EVP_DigestFinal(&ctx, digest, &len);
-#else
+#else /* OPENSSL */
 	MD5Init(&md5);
 	MD5Update(&md5, key, (u_int)cache_keylen);
 	MD5Update(&md5, (u_char *)pkt, (u_int)length);
 	MD5Final(digest, &md5);
 	len = 16;
 #endif /* OPENSSL */
-	if ((unsigned)size != len + 4)
+	if ((unsigned)size != len + 4) {
+		msyslog(LOG_ERR,
+		    "MAC decrypt: MAC length error");
 		return (0);
-
+	}
 	return (!memcmp(digest, (char *)pkt + length + 4, len));
 }
 
