@@ -1,3 +1,5 @@
+* Remove unused file from sntp/Makefile.am's distribution list.
+* new crypto signature cleanup.
 (4.2.5p240-RC) 2009/11/05 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1364] clock_gettime() not detected, need -lrt on Debian 5.0.3.
 * Provide all of OpenSSL's signature methods for ntp.keys (FIPS 140-2).
